dzielenieexpected